# vectorDB-internship

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
tests/: test_sdk.py
vector-store/: Chart.yaml  values.yaml
vector-store/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pv.yaml  service.yaml  serviceaccount.yaml
vector-store/templates/tests/: test-connection.yaml
vector_store/: .env
vector_store/app/: app_state.py  constants.py  main.py
vector_store/app/api/: chunks.py  documents.py  libraries.py  query.py
vector_store/app/db/: bruteforce_index.py  cache.py  database.py  index.py  index_factory.py  lsh_index.py  memory_store.py  persistence.py  session.py  store.py
vector_store/app/db/models/: __init__.py  chunk.py  document.py  library.py  lsh_index.py
vector_store/app/db/repositories/: chunk_repo.py  document_repo.py  library_repo.py  lsh_index_repo.py
vector_store/app/db/services/: chunk_store.py  document_store.py  library_store.py  query_store.py
vector_store/app/models/: chunk.py  document.py  library.py  query.py
vector_store/scripts/: create_chunk_with_cohere.py  init_db.py  test_db_init.py  test_persistence.py
vector_store_sdk/: README.md  main.py  pyproject.toml  test_sdk_e2e.py  test_sdk_full_flow.py  test_sdk_manual.py  test_sdk_tutorial_flow.py
vector_store_sdk/vectorstore_client/: __init__.py  client.py  constants.py
vector_store_sdk/vectorstore_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vector_store_sdk/vectorstore_client/models/: chunk.py  library.py  query.py
