[project]
name = "vectorstore-client"
version = "0.1.0"
description = "SDK to interact with a Vector Store API"
authors = [{name = "Manu"}]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pydantic>=2.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pydantic.PydanticDeprecatedSince20"
]
[project.optional-dependencies]
dev = ["black", "ruff"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["vector_store_sdk/vectorstore_client.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "F811"]

[tool.ruff.format]
quote-style = "double"